# eggdrop

./: .gitignore  AUTHORS  CONTENTS  COPYING  ChangeLog  FEATURES  INSTALL  Makefile  Makefile.in  NEWS  NEWS-1.8.0  NEWS-1.8.1  NEWTO1.3.0  NEWTO1.4  NEWTO1.4.0  NEWTO1.5.0  PATCH-HOWTO  README  README.1.8.0  THANKS  TODO  UPGRADING  acconfig.h  aclocal.m4  ax_create_stdint_h.m4  basic.eggdrop.conf  binds.py  config.h.in  configure  configure.ac  configure.in  disabled_modules  eggdrop-basic.conf  eggdrop.advanced.conf  eggdrop.complete.conf  eggdrop.conf  eggdrop.conf.dist  eggdrop.simple.conf  install-sh  lush.h.in  (+6 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE  PULL_REQUEST_TEMPLATE
.github/workflows/: autotools.yml  ccpp.yml  configure_flags.yml  cppcheck.yml  dependencies.yml  main.yml  make.yml  manual_autoconf.yml  misc.yml  openssl.yml  tcl.yml
conf/: example.basic.conf  example.conf
conf/defaults/: example.conf
doc/: ABOUT  ACCOUNTS  AUTHORS  AUTOSCRIPTS  BANS  BOTNET  BUG-REPORT  COMPILE-GUIDE  COMPILING-FAQ  CONTENTS  Changes0.6  Changes0.7  Changes0.9  Changes1.0  Changes1.1  Changes1.10  Changes1.2  Changes1.3  Changes1.4  Changes1.5  Changes1.6  Changes1.6.22  Changes1.8  Changes1.9  ENCODING  FAQ  FIRST-SCRIPT  IPV6  IPv6  IRCv3  KNOWN-PROBLEMS  LEGAL  MODULES  Makefile  Makefile.in  Ode_To_Beldin  PARTYLINE  PATCH-HOWTO  PBKDF2  TEXT-SUBSTITUTIONS  (+24 more)
doc/doctrees/: environment.pickle  index.doctree
doc/geo@eduardo.eggheads.org/: objects.inv  searchindex.js
doc/html/: .buildinfo  ABOUT.html  BANS.html  BOTNET.html  COMPILE-GUIDE.html  INSTALL.html  KNOWN-PROBLEMS.html  README.html  TEXT-SUBSTITUTIONS.html  TRICKS.html  WEIRD-MESSAGES.html  about.html  app-botnet.html  app-problems.html  app-probs.html  app-sharing.html  app-tcl-commands.html  app-textsub.html  app-tricks.html  app-weird.html  authors.html  bans.html  botnet.html  compiling.html  egg-core.html  faq1.html  faqs.html  features.html  flags.html  genindex.html  index.html  install.html  ipv6.html  mod-assoc.html  mod-blowfish.html  mod-channels.html  mod-compress.html  mod-console.html  mod-ctcp.html  mod-dns.html  (+22 more)
doc/man1/: eggdrop.1
doc/modules/: MODULES  mod.assoc  mod.blowfish  mod.channels  mod.compress  mod.console  mod.ctcp  mod.dns  mod.filesys  mod.ident  mod.irc  mod.notes  mod.pbkdf2  mod.python  mod.seen  mod.server  mod.share  mod.transfer  mod.twitch  mod.uptime  mod.woobie  writing-modules
doc/settings/: CONTENTS  contents  core.settings  mod.assoc  mod.blowfish  mod.channel  mod.channels  mod.compress  mod.console  mod.ctcp  mod.dns  mod.filesys  mod.ident  mod.irc  mod.notes  mod.seen  mod.server  mod.share  mod.transfer  mod.uptime  mod.wire  mod.woobie  tricks
doc/sphinx_source/: Makefile  README.rst  WEIRD-MESSAGES.rst  binds.rst  conf.py  eggdrop.css  index.rst  tcl-commands.rst
doc/web_docs/: app-botnet.html  app-probs.html  app-tcl-commands.html  bans.html  botnet.html  compiling.html  faq1.html  faqs.html  features.html  flags.html  index.html  install.html  mod-blowfish.html  mod-channels.html  mod-compress.html  mod-dns.html  mod-filesys.html  mod-irc.html  mod-notes.html  mod-server.html  news.html  readme.html  sharing.html  starting.html  users.html
eggdroppy/: __init__.py
eggdroppy/binds/: __init__.py  binds.py
eggdroppy/eggdrop/: __init__.py  binds.py
eggdroppy/myscript/: __init__.py  myscript.py
help/: assoc.help  chaninfo.help  channels.help  cmds1.help  cmds2.help  console.help  core.help  filesys.help  irc.help  notes.help  seen.help  server.help  share.help  userinfo.help
help/msg/: userinfo.help
help/set/: channels.help  cmds1.help  cmds2.help
language/: core.danish.lang  core.english.lang  core.finnish.lang  core.french.lang  core.german.lang  core.italian.lang  core.portuguese.lang
logs/: CONTENTS
m4/: ax_create_stdint_h.m4  python.m4  tcl.m4
misc/: addpatch  check_tclversion.c  commit.template  config.guess  docsfilter.py  genChangelog  genchanges  generateDocs  generatedocs  getcommit  install-sh  killwhitespace  makedepend  mkinstalldirs  modconfig  newversion  releaseprep  runautotools  setpatch  updatecopyright
scripts/: CONTENTS  Makefile  Makefile.in  action.fix.tcl  alltools.tcl  autobotchk  autoscripts.tcl  botchk  bugreport.tcl  cmd_resolve.tcl  compat.tcl  dccwhois.tcl  getops-2.2d.tcl  getops.tcl  klined.tcl  notes2.tcl  ques4.tcl  ques5.tcl  quotepass.tcl  quotepong.tcl  sentinel.tcl  sentinel1.54.tcl  sentinel1.55.tcl  sortedbots.tcl  twitch.tcl  userinfo.tcl  userinfo1.0.tcl  weed
scripts/eggdroppy/: __init__.py  binds.py  cmds.py  flags.py
scripts/help/: cmd_resolve.help  (+1 more)
src/: Makefile  Makefile.in  bg.c  bg.h  botcmd.c  botmsg.c  botnet.c  chan.h  chanprog.c  cmds.c  cmdt.h  dcc.c  dccutil.c  dns.c  dns.h  eggdrop.h  flags.c  flags.h  lang.h  language.c  list.h  main.c  main.h  match.c  mem.c  misc.c  misc_file.c  misc_file.h  modules.c  modules.h  net.c  patch.h  proto.h  rfc1459.c  rfc1459.h  stat.h  tandem.h  tcl.c  tcldcc.c  tclegg.h  (+11 more)
src/mod/compress.mod/: .gitignore  Makefile.in  compress.c  compress.h  compress_config.h.in  configure  configure.ac  configure.in  modconf  modinfo  tclcompress.c
src/mod/compress.mod/help/: compress.help
src/mod/compress.mod/help/set/: compress.help
src/mod/dns.mod/: .gitignore  Makefile  Makefile.in  configure  configure.ac  configure.in  coredns.c  dns.c  dns.h  modconf  modinfo
src/mod/dns.mod/help/: dns.help
src/mod/dns.mod/help/set/: dns.help
src/mod/pbkdf2.mod/: Makefile  Makefile.in  configure  configure.ac  modconf  modinfo  pbkdf2.c  pbkdf2.h  pbkdf2crypt.c  pbkdf2crypt_mbedtls.c  pbkdf2crypt_openssl.c  tclpbkdf2.c
src/mod/pbkdf2.mod/mbedtls/: config.h  pkcs5.c
src/mod/python.mod/: Makefile  Makefile.in  configure  configure.ac  example.py  pycmds.c  pymod.h  python.c  python.h  tclpython.c
src/mod/python.mod/exampleScripts/: bestfriend.py  listtls.py
src/mod/python.mod/examples/: bestfriend.py
src/mod/python.mod/scripts/: greet.py  imdb.py  listtls.py  urlTitle.py
text/: CONTENTS  banner  motd  motd.finnish  motd.italian  webui.html
(+670 files in other folders)
